--- a/Generator.html
+++ b/Generator.html
@@ -13,9 +13,9 @@
 <header>
 
  <nav id="bar" >
-	 <a #="Layout2.html"> Logo </a>
-	 <a id="top" #="Layout2.html"> Home </a>
-	 <a id="top" #="Layout2.html"> Contact </a>
+	 <a id="top" #="Layout2.html"> Logo </a>
+	 <a id="top1" #="Layout2.html"> Home </a>
+	 <a id="top1" #="Layout2.html"> Contact </a>
 	</nav>
 	
 </header>
