--- a/Generator.html
+++ b/Generator.html
@@ -14,8 +14,8 @@
 
  <nav id="bar" >
 	 <a id="top" #="Layout2.html"> Logo </a>
-	 <a id="top1" #="Layout2.html"> Home </a>
 	 <a id="top1" #="Layout2.html"> Contact </a>
+	 <a id="top1" #="Layout2.html"> Home </a>
 	</nav>
 	
 </header>
@@ -23,12 +23,15 @@
     <h1 id="title"> Generator-Express MVC </h1>
 	<h4 id="title1" > Welcome to Generator Express MVC </h4>
     
-	<button class="btn btn-warning" type="button"> Generator- Express MVC </button>
-	
+	<button class="btn btn-warning" type="button" > Generator- Express MVC </button>
+	<br>
+	<br>
+	<br>
+	<br>
 <div class="row">
   <div class="col-md-4">
     <div class="thumbnail">
-        <p> Animals </p>
+        <p class="text-center" > Animals </p>
         <img src="img/sunny-today-tease-180329_3a0450a51a289aeec7e69a7c63e040f3_fit-760w.jpg" alt="Lights" style="width:100%">
         <div class="caption">
           <p>With few exceptions, animals consume organic material, breathe oxygen, are able to move, reproduce sexually, and grow from a hollow sphere of cells, the blastula, during embryonic development. Over 1.5 million living animal...</p>
@@ -38,7 +41,7 @@
   </div>
   <div class="col-md-4">
     <div class="thumbnail">
-        <p> Cities </p>
+        <p class="text-center"  > Cities </p>
         <img src="img/lights-of-city.jpg" alt="Nature" style="width:100%">
         <div class="caption">
           <p>A city is a large human settlement.Cities generally have extensive systems for housing, transportation,and communication. Their density facilitates interaction between people, government organizations and businesses...</p>
@@ -48,7 +51,7 @@
   </div>
   <div class="col-md-4">
     <div class="thumbnail">
-        <p> Nature </p>
+        <p class="text-center"  > Nature </p>
         <img src="img/Best-Nature.jpg" alt="Fjords" style="width:100%">
         <div class="caption">
           <p>Nature, in the broadest sense, is the natural, physical, or material world or universe.The study of nature is a large, if not the only, part of science. Although humans are part of nature, human activity is often understood as...</p>
